fix: multiple dots overflow

--- a/webapp/src/main/webapp/resources/css/global.css
+++ b/webapp/src/main/webapp/resources/css/global.css
@@ -8,7 +8,7 @@
 }
 
 p {
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .outerContainer {
