--- a/webapp/src/main/webapp/resources/css/job.css
+++ b/webapp/src/main/webapp/resources/css/job.css
@@ -27,7 +27,7 @@
     font-size: 15px;
     font-weight: 400;
     line-height: 1.25;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .contactInfo {
